test/JDBC/expected/babel_choose.out
select choose (1, cast('2020-10-20 09:00:00' as datetime), cast('2020-10-21' as date));
GO
~~START~~
datetime
2020-10-20 09:00:00.0
~~END~~

select choose ('1', cast('abc' as varchar(3)), cast('cba' as char(3)));
GO
~~START~~
varchar
abc
~~END~~

select choose (1.3, cast(3.14 as float), cast(31.4 as numeric(3, 1)));
GO
~~START~~
float
3.14
~~END~~

select choose (2, cast(3.14 as float), cast(1 as int));
GO
~~START~~
float
1.0
~~END~~

select choose ('2', cast('$123.123' as money), cast(1 as int));
GO
~~START~~
money
1.0000
~~END~~

select choose (2.6, cast('$123.123' as money), cast(3.14 as float));
GO
~~START~~
float
3.14
~~END~~

select choose (3, cast('2020-10-20 09:00:00' as datetime), cast('09:00:00' as time), cast('2001-01-01' as date));
GO
~~START~~
datetime
2001-01-01 00:00:00.0
~~END~~

select choose ('3', cast('$123.123' as money), cast(321 as bigint), cast(1 as tinyint));
GO
~~START~~
money
1.0000
~~END~~

select choose (3.9, cast(3.14 as float), cast('$123.123' as money), cast(-1 as smallint));
GO
~~START~~
float
-1.0
~~END~~


-- test select with variables
CREATE PROCEDURE test_choose
AS BEGIN
    DECLARE @v int;
    SET @v = 1;
    SELECT choose(@v, 2, 3);
END
GO
EXEC test_choose
GO
~~START~~
int
2
~~END~~

DROP PROCEDURE test_choose
GO

-- test select with SQL Expressions
select choose (choose (1, 2, 3), 'a', 'b', 'c');
GO
~~START~~
varchar
b
~~END~~


-- Error, different categories
select choose (1, cast(1 as int), cast('abc' as varchar(3)));
GO
~~START~~
int
1
~~END~~

select choose (2, cast(0 as bit), cast(1 as int));
GO
~~START~~
bit
1
~~END~~


-- Error, insufficient arguments
select choose (1);
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: syntax error at or near ")")~~


-- Null handling
-- choose null as result
select isnull(choose (1, null, 0), 100);
GO
~~START~~
int
100
~~END~~

-- null as choose index
select isnull(choose (null, 1, 0), 100);
GO
~~START~~
int
100
~~END~~

-- choose out of index
select isnull(choose (0, 1, 2), 100);
GO
~~START~~
int
100
~~END~~

select isnull(choose (3, 1, 2), 100);
GO
~~START~~
int
100
~~END~~

